--- a/assets/less/components/forms.less
+++ b/assets/less/components/forms.less
@@ -52,8 +52,8 @@
 
 }
 
-input:not( [type=checkbox] ):not( [type=radio] ),
-textarea {
+.form-control-input input,
+.form-control-input textarea {
 
 	.form-input;
 	.placeholder( @grayDarkest );
