--- a/assets/less/ie.less
+++ b/assets/less/ie.less
@@ -26,6 +26,7 @@ html.ie8 > body {
 html.ie.oldie > body {
 
 	.layout-dash { overflow: visible; }
+
 	#dash {
 
 		overflow: visible;
@@ -56,13 +57,10 @@ html.ie.oldie > body {
 				top: 0;
 				left: 0;
 
-				height: 30px;
+				height: 26px;
 				width: ( @fontSizeSmall ) + ( @margin ) + 2px;
 
 				&:before {
-
-					// .align-centers;
-					// .icon;
 
 					color: @formGray;
 					font-size: 16px;
